--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "firebase": "^8.6.8",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
