--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
     "next": "11.0.0",
+    "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
