--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "firebase": "^8.6.8",
     "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
-    "next": "11.0.0",
+    "next": "^11.1.0",
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
