--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "crypto-js": "^4.1.1",
     "firebase": "^8.6.8",
     "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
-    "next": "^11.1.0",
+    "next": "^12.1.5",
     "numeral": "^2.0.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
