--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "crypto-js": "^4.1.1",
     "firebase": "^8.6.8",
     "framer-motion": "^4.1.17",
-    "moment": "^2.29.1",
+    "moment": "^2.29.2",
     "next": "^12.1.5",
     "numeral": "^2.0.6",
     "react": "^18.0.0",
@@ -24,7 +24,7 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.0"
+    "eslint": "^8.13.0",
+    "eslint-config-next": "^12.1.5"
   }
 }
