--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@headlessui/react": "^1.5.0",
     "crypto-js": "^4.1.1",
     "firebase": "^8.6.8",
     "framer-motion": "^4.1.17",
